feat(menu): tray submenus
Adds CSS and examples for the "Tray submenus" design in the guidelines
and design file. This is for the use of Menu within Tray, to show the
parent menu item at the top with a back button.

Also updates some examples markup:
- Remove several duplicate IDs
- Remove not needed aria attributes when the label text is already
  wrapped by the label element (previously was resulting in screen
  reader reading the label twice in a row).

--- a/components/menu/package.json
+++ b/components/menu/package.json
@@ -22,7 +22,8 @@
     "@spectrum-css/divider": ">=2",
     "@spectrum-css/icon": ">=4",
     "@spectrum-css/switch": ">=4",
-    "@spectrum-css/tokens": ">=11.1.0"
+    "@spectrum-css/tokens": ">=11.1.0",
+    "@spectrum-css/tray": ">=2.1"
   },
   "devDependencies": {
     "@spectrum-css/checkbox": "^8.0.2",
@@ -31,6 +32,7 @@
     "@spectrum-css/icon": "^4.0.5",
     "@spectrum-css/switch": "^4.0.15",
     "@spectrum-css/tokens": "^13.0.4",
+    "@spectrum-css/tray": "^2.1.17",
     "gulp": "^4.0.0"
   },
   "publishConfig": {
