fix(backgroundlayers): correct typos

--- a/components/backgroundlayers/metadata/backgroundlayers.yml
+++ b/components/backgroundlayers/metadata/backgroundlayers.yml
@@ -15,8 +15,8 @@ examples:
         <div class="spectrum-BackgroundLayers--pasteboard" style="inline-size: 100px; block-size: 100px; border-radius: 10px; position: absolute; left: 40px; top: 40px; z-index: 1;">
         </div>
       </div>
-  - id: backgroundlayers-editting
-    name: Editting Contexts
+  - id: backgroundlayers-editing
+    name: Editing Contexts
     markup: |
       <div class="spectrum-Examples" style="justify-content: flex-start; position: relative; height: 150px;">
         <div class="spectrum-BackgroundLayers--elevated" style="inline-size: 100px; block-size: 100px; border-radius: 10px; position: absolute; z-index: 3;">
