fix(backgroundlayers): extra comma in package.json

--- a/components/alertdialog/package.json
+++ b/components/alertdialog/package.json
@@ -18,8 +18,8 @@
     "build": "gulp"
   },
   "peerDependencies": {
+    "@spectrum-css/backgroundlayers": ">=1",
     "@spectrum-css/button": ">=11",
-    "@spectrum-css/backgroundlayers": ">=1",,
     "@spectrum-css/buttongroup": ">=6",
     "@spectrum-css/divider": ">=1 <=2",
     "@spectrum-css/icon": ">=4",
@@ -28,6 +28,7 @@
     "@spectrum-css/underlay": ">=3"
   },
   "devDependencies": {
+    "@spectrum-css/backgroundlayers": "^1.0.0-alpha.0",
     "@spectrum-css/button": "^11.0.16",
     "@spectrum-css/buttongroup": "^6.1.14",
     "@spectrum-css/component-builder-simple": "^3.0.0",
@@ -36,7 +37,6 @@
     "@spectrum-css/modal": "^4.0.3",
     "@spectrum-css/tokens": "^13.0.4",
     "@spectrum-css/underlay": "^3.0.11",
-    "@spectrum-css/backgroundlayers": "^1.0.0-alpha.0",
     "gulp": "^4.0.0"
   },
   "publishConfig": {
